syntax = "proto3";

package proto.identityhub.v1;

option go_package = "github.com/getzion/relay/gen/identityhub/v1";

import "proto/identityhub/v1/requests.proto";
import "proto/identityhub/v1/responses.proto";

/**
 * Threads are a linked series of topically associated messages that are intended to
 * result in activities performed by entities participating in the message thread.
 * https://identity.foundation/identity-hub/spec/#threads
 */

service ThreadsService {
  rpc ThreadsQuery(ThreadsQueryRequest) returns (ThreadsQueryResponse) {}
  rpc ThreadsCreate(ThreadsCreateRequest) returns (ThreadsCreateResponse) {}
  rpc ThreadsReply(ThreadsReplyRequest) returns (ThreadsReplyResponse) {}
  rpc ThreadsClose(ThreadsCloseRequest) returns (ThreadsCloseResponse) {}
  rpc ThreadsDelete(ThreadsDeleteRequest) returns (ThreadsDeleteResponse) {}
}

message ThreadsQueryRequest {
  Request request = 1;
}
message ThreadsQueryResponse {
  Response response = 1;
}

message ThreadsCreateRequest {
  Request request = 1;
}
message ThreadsCreateResponse {
  Response response = 1;
}

message ThreadsReplyRequest {
  Request request = 1;
}
message ThreadsReplyResponse {
  Response response = 1;
}

message ThreadsCloseRequest {
  Request request = 1;
}
message ThreadsCloseResponse {
  Response response = 1;
}

message ThreadsDeleteRequest {
  Request request = 1;
}
message ThreadsDeleteResponse {
  Response response = 1;
}
